tests/unit-fail-compilation/enum-lvalue.c.ref
enum-lvalue.c:6:12: error: Unary '&' operator applied to non-lvalue.

    Constraint violation (CV-CER1):
        see C11 section 6.5.3.2:1 http://rvdoc.org/C11/6.5.3.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
